--- a/continuous_integration/environment-mindeps.yaml
+++ b/continuous_integration/environment-mindeps.yaml
@@ -7,17 +7,17 @@ dependencies:
   - click=7.0
   - cloudpickle=1.5.0
   - cytoolz=0.10.1
-  - jinja2
+  - jinja2=2.10.1
   - locket=1.0.0
   - msgpack-python=0.6.2
   - packaging=20.0
   - psutil=5.6.3
-  - pyyaml
+  - pyyaml=5.3.1
   - sortedcontainers=2.0.5
   - tblib=1.6.0
   - toolz=0.10.0
   - tornado=6.0.3
-  - urllib3
+  - urllib3=1.24.3
   - zict=0.1.4
   # Distributed depends on the latest version of Dask
   - pip
