--- a/continuous_integration/recipes/distributed/meta.yaml
+++ b/continuous_integration/recipes/distributed/meta.yaml
@@ -33,17 +33,17 @@ requirements:
     - cloudpickle >=1.5.0
     - cytoolz >=0.10.1
     - {{ pin_compatible('dask-core', max_pin='x.x.x.x') }}
-    - jinja2
+    - jinja2 >=2.10.1
     - locket >=1.0.0
     - msgpack-python >=0.6.2
     - packaging >=20.0
     - psutil >=5.6.3
-    - pyyaml
+    - pyyaml >=5.3.1
     - sortedcontainers >=2.0.5
     - tblib >=1.6.0
     - toolz >=0.10.0
     - tornado >=6.0.3,<6.2
-    - urllib3
+    - urllib3 >=1.24.3
     - zict >=0.1.4
   run_constrained:
     - openssl !=1.1.1e
