--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -8,7 +8,8 @@ dependencies:
   - packaging
   - pip
   - asyncssh
-  - bokeh
+  # Temporarily installing from PyPI until `bokeh=3.0.2` is on conda-forge
+  # - bokeh
   - click
   - cloudpickle
   - coverage
@@ -48,5 +49,7 @@ dependencies:
   - zict
   - zstandard >=0.9.0
   - pip:
+      # Install `bokeh` with conda once 3.0.2 is on conda-forge
+      - bokeh >= 3.0.2
       - git+https://github.com/dask/dask
       - keras
