--- a/continuous_integration/environment-3.8.yaml
+++ b/continuous_integration/environment-3.8.yaml
@@ -7,7 +7,8 @@ dependencies:
   - packaging
   - pip
   - asyncssh
-  - bokeh < 3 # Only tested here
+  # Temporary restriction until https://github.com/dask/distributed/issues/7173 is resolved
+  - bokeh<3
   - click
   - cloudpickle
   - coverage
