--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -168,7 +168,7 @@ jobs:
           set -o pipefail
           mkdir reports
 
-          pytest distributed \
+          pytest distributed/cli/tests/test_dask_spec.py::test_text \
             -m "not avoid_ci and ${{ matrix.partition }}" --runslow \
             --leaks=fds,processes,threads \
             --junitxml reports/pytest.xml -o junit_suite_name=$TEST_ID \
