Add support for Python 3.11 (#7249)
* use sys.executable for python binary

* pass the desired frame to traceback.walk_stack for 3.11

see https://github.com/python/cpython/issues/96092
and it's not really intended for use outside of StackSummary.extract,
see https://github.com/python/cpython/pull/99015#issuecomment-1301363288

* the GC overhead now depends on _PyType_PreHeaderSize

https://github.com/faster-cpython/ideas/discussions/125
https://github.com/python/cpython/commit/8319114feedd2a5b77378bba24eb9fb2689c5033#diff-a3a5c73931235f7f344c072dc755d6508e13923db3f5d581c5e88652075871cbR1684

* GH-6785: asyncio.wait no longer calls ensure_future

https://github.com/python/cpython/issues/95601

* test on python 3.11

* exclude macos py 3.10

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,13 +23,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         queuing: [queue]
         # Cherry-pick test modules to split the overall runtime roughly in half
         partition: [ci1, not ci1]
         exclude:
           - os: macos-latest
             python-version: 3.9
+          - os: macos-latest
+            python-version: 3.10
         include:
           - os: ubuntu-latest
             python-version: 3.9
