add dask spec --help to nightly build tests

--- a/continuous_integration/recipes/distributed/meta.yaml
+++ b/continuous_integration/recipes/distributed/meta.yaml
@@ -64,6 +64,7 @@ test:
     - dask scheduler --help
     - dask ssh --help
     - dask worker --help
+    - dask spec --help
   requires:
     - pip
 
