Add opentelemetry-api to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dask == 2023.1.0
 jinja2 >= 2.10.3
 locket >= 1.0.0
 msgpack >= 1.0.0
+opentelemetry-api >= 1.15.0
 packaging >= 20.0
 psutil >= 5.7.0
 pyyaml >= 5.3.1
