Add minimum dependency testing to CI (#7285)
Co-authored-by: James Bourbeau <jrbourbeau@gmail.com>
Co-authored-by: Florian Jetter <fjetter@users.noreply.github.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,7 +9,7 @@ on:
 # When this workflow is queued, automatically cancel any previous running
 # or pending jobs from the same branch
 concurrency:
-  group: ${{ github.ref }}
+  group: tests-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -23,22 +23,26 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        environment: [mindeps, "3.8", "3.9", "3.10", "3.11"]
         queuing: [queue]
         # Cherry-pick test modules to split the overall runtime roughly in half
         partition: [ci1, not ci1]
         exclude:
           - os: macos-latest
-            python-version: 3.9
+            environment: "3.9"
           - os: macos-latest
-            python-version: 3.10
+            environment: "3.10"
+          - os: macos-latest
+            environment: mindeps
+          - os: windows-latest
+            environment: mindeps
         include:
           - os: ubuntu-latest
-            python-version: 3.9
+            environment: "3.9"
             queuing: no_queue
             partition: "ci1"
           - os: ubuntu-latest
-            python-version: 3.9
+            environment: "3.9"
             queuing: no_queue
             partition: "not ci1"
 
@@ -51,15 +55,15 @@ jobs:
         # run: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
 
     env:
-      CONDA_FILE: continuous_integration/environment-${{ matrix.python-version }}.yaml
+      CONDA_FILE: continuous_integration/environment-${{ matrix.environment }}.yaml
 
     steps:
       - name: Set $TEST_ID
         run: |
           export PARTITION_LABEL=$( echo "${{ matrix.partition }}" | sed "s/ //" )
-          export TEST_ID="${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.queuing }}-$PARTITION_LABEL"
+          export TEST_ID="${{ matrix.os }}-${{ matrix.environment }}-${{ matrix.queuing }}-$PARTITION_LABEL"
           # Switch to this version for stress-test:
-          # export TEST_ID="${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.queuing }}-$PARTITION_LABEL-${{ matrix.run }}"
+          # export TEST_ID="${{ matrix.os }}-${{ matrix.environment }}-${{ matrix.queuing }}-$PARTITION_LABEL-${{ matrix.run }}"
           echo "TEST_ID: $TEST_ID"
           echo "TEST_ID=$TEST_ID" >> $GITHUB_ENV
         shell: bash
@@ -101,7 +105,7 @@ jobs:
           path: ${{ env.CONDA }}/envs
           key: conda-${{ matrix.os }}-${{ steps.get-date.outputs.today }}-${{ hashFiles(env.CONDA_FILE) }}-${{ env.CACHE_NUMBER }}
         env:
-          # Increase this value to reset cache if continuous_integration/environment-${{ matrix.python-version }}.yaml has not changed
+          # Increase this value to reset cache if continuous_integration/environment-${{ matrix.environment }}.yaml has not changed
           CACHE_NUMBER: 0
         id: cache
 
@@ -150,6 +154,8 @@ jobs:
         run: echo "DASK_DISTRIBUTED__SCHEDULER__WORKER_SATURATION=inf" >> $GITHUB_ENV
 
       - name: Print host info
+        # host_info.py imports numpy, which isn't a direct dependency of distributed
+        if: matrix.environment != 'mindeps'
         shell: bash -l {0}
         run: |
           python continuous_integration/scripts/host_info.py
@@ -159,6 +165,7 @@ jobs:
         shell: bash -l {0}
         env:
           PYTHONFAULTHANDLER: 1
+          MINDEPS: ${{ matrix.environment == 'mindeps' }}
         run: |
           source continuous_integration/scripts/set_ulimit.sh
           set -o pipefail
