--- a/continuous_integration/environment-3.10.yaml
+++ b/continuous_integration/environment-3.10.yaml
@@ -17,7 +17,7 @@ dependencies:
   - h5py
   - ipykernel
   - ipywidgets
-  - jinja2
+  - jinja2 >=2.10.3
   - locket >=1.0
   - msgpack-python
   - netcdf4
