--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 click >= 7.0
 cloudpickle >= 1.5.0
 dask == 2022.12.1
-jinja2
+jinja2 >= 2.10.3
 locket >= 1.0.0
-msgpack >= 0.6.0
+msgpack >= 1.0.0
 packaging >= 20.0
-psutil >= 5.0
-sortedcontainers !=2.0.0, !=2.0.1
+psutil >= 5.7.0
+pyyaml >= 5.3.1
+sortedcontainers >= 2.0.5
 tblib >= 1.6.0
 toolz >= 0.10.0
 tornado >= 6.0.3
-urllib3
-zict >= 0.1.3
-pyyaml
+urllib3 >= 1.24.3
+zict >= 2.1.0
