--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,11 +23,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        # DNM
-        environment: ["3.11"]
+        environment: [mindeps, "3.8", "3.9", "3.10", "3.11"]
         queuing: [queue]
         # Cherry-pick test modules to split the overall runtime roughly in half
-        partition: [not ci1]
+        partition: [ci1, not ci1]
         exclude:
           - os: macos-latest
             environment: "3.9"
@@ -37,6 +36,15 @@ jobs:
             environment: mindeps
           - os: windows-latest
             environment: mindeps
+        include:
+          - os: ubuntu-latest
+            environment: "3.9"
+            queuing: no_queue
+            partition: "ci1"
+          - os: ubuntu-latest
+            environment: "3.9"
+            queuing: no_queue
+            partition: "not ci1"
 
         # Uncomment to stress-test the test suite for random failures.
         # Must also change `export TEST_ID` in first step below.
