--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -26,15 +26,20 @@ jobs:
     name: Build (and upload)
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.3.0
+      - name: Checkout source
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          # Needed by versioneer.
+          # Must be higher than the number of commits since the latest release.
+          fetch-depth: 200
+
       - name: Set up Python
-        uses: conda-incubator/setup-miniconda@v2.2.0
+        uses: conda-incubator/setup-miniconda@v2
         with:
           miniforge-variant: Mambaforge
           use-mamba: true
           python-version: 3.8
+
       - name: Install dependencies
         run: |
           mamba install boa conda-verify
@@ -42,6 +47,7 @@ jobs:
           which python
           pip list
           mamba list
+
       - name: Build conda packages
         run: |
           # suffix for pre-release package versions
@@ -64,6 +70,7 @@ jobs:
                            --channel dask/label/dev \
                            --no-anaconda-upload \
                            --output-folder .
+
       - name: Upload conda packages
         if: |
           github.event_name == 'push'
