--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -71,9 +71,8 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v3
         with:
-          # Needed by versioneer.
-          # Must be higher than the number of commits since the latest release.
-          fetch-depth: 200
+          # Fetch the whole git history. Needed by versioneer.
+          fetch-depth: 0
 
       - name: Setup Conda Environment
         uses: conda-incubator/setup-miniconda@v2
