--- a/continuous_integration/environment-3.8.yaml
+++ b/continuous_integration/environment-3.8.yaml
@@ -46,6 +46,6 @@ dependencies:
   - zict
   - zstandard >=0.9.0
   - pip:
-      - git+https://github.com/dask/dask
+      - git+https://github.com/fjetter/dask@b1e3ccc7683665e6af54c4b2645268ec28fd9884
       - git+https://github.com/jcrist/crick  # Only tested here
       - keras
