--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -49,5 +49,5 @@ dependencies:
   - zict
   - zstandard >=0.9.0
   - pip:
-      - git+https://github.com/dask/dask
+      - git+https://github.com/fjetter/dask@b1e3ccc7683665e6af54c4b2645268ec28fd9884
       - keras
