--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -171,8 +171,8 @@ jobs:
           set -o pipefail
           mkdir reports
 
-          pytest distributed/tests/test_worker_memory.py \
-            -m "not avoid_ci" --runslow \
+          pytest distributed \
+            -m "not avoid_ci and ${{ matrix.partition }}" --runslow \
             --leaks=fds,processes,threads \
             --junitxml reports/pytest.xml -o junit_suite_name=$TEST_ID \
             --cov=distributed --cov-report=xml \
