--- a/continuous_integration/environment-3.8.yaml
+++ b/continuous_integration/environment-3.8.yaml
@@ -46,7 +46,6 @@ dependencies:
   - zict
   - zstandard >=0.9.0
   - pip:
-      # - git+https://github.com/dask/dask
-      - git+https://github.com/hendrikmakait/dask@rechunking
+      - git+https://github.com/dask/dask
       - git+https://github.com/jcrist/crick  # Only tested here
       - keras
