--- a/continuous_integration/environment-3.9.yaml
+++ b/continuous_integration/environment-3.9.yaml
@@ -49,6 +49,5 @@ dependencies:
   - zict
   - zstandard >=0.9.0
   - pip:
-      # - git+https://github.com/dask/dask
-      - git+https://github.com/hendrikmakait/dask@rechunking
+      - git+https://github.com/dask/dask
       - keras
