--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -203,8 +203,8 @@ jobs:
           set -o pipefail
           mkdir reports
 
-          pytest distributed \
-            -m "not avoid_ci and ${{ matrix.partition }}" --runslow \
+          # DNM
+          pytest distributed/tests/test_utils_test.py::test_popen_timeout \
             --leaks=fds,processes,threads \
             --junitxml reports/pytest.xml -o junit_suite_name=$TEST_ID \
             --cov=distributed --cov-report=xml \
